--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: BetterDocs
 url: "#"
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-65593962-3
 google_maps_javascript_api_key:
 snipcart_key: ""
 
